[gd_scene load_steps=2 format=3 uid="uid://c4tf01fy7yfm4"]

[ext_resource type="Script" path="res://ui/world_gen_ui.gd" id="1_ybu1s"]

[node name="WorldGenUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ybu1s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 250.0
offset_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "World Generation"

[node name="SeedEdit" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Seed"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="GenerateButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Generate"

[node name="RandomSeedButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Random"

[node name="SnapToCapitalButton" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Snap"

[node name="ControlsLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "
Controls:
Pan: WASD or Middle Mouse Drag
Zoom: Mouse Wheel"
autowrap_mode = 2
